do not generate external models

--- a/src/main/resources/swagger.api/marc-specifications.yaml
+++ b/src/main/resources/swagger.api/marc-specifications.yaml
@@ -61,5 +61,5 @@ components:
     error:
       type: object
     marcSpec:
-      $ref: schemas/common.yaml#/marcSpecification
+      $ref: 'schemas/common.yaml#/marcSpecification'
 
