--- a/docker/.env
+++ b/docker/.env
@@ -1,4 +1,10 @@
 COMPOSE_PROJECT_NAME=folio-mod-quick-marc
+
+# Module variables
+ENV=folio
+MODULE_REPLICAS=2
+
+# DB variables
 DB_HOST=postgres
 DB_PORT=5432
 DB_DATABASE=modules
@@ -7,9 +13,10 @@ DB_PASSWORD=folio_admin
 PGADMIN_DEFAULT_EMAIL=user@domain.com
 PGADMIN_DEFAULT_PASSWORD=admin
 PGADMIN_PORT=5050
+
+# Kafka variables
 KAFKA_HOST=kafka
-KAFKA_PORT=9092
-REPLICATION_FACTOR=1
-ENV=folio
-DEBUG_PORT=5005
+KAFKA_PORT=9093
+KAFKA_TOPIC_PARTITIONS=2
+KAFKA_UI_PORT=9000
 
