--- a/docker/infra-docker-compose.yml
+++ b/docker/infra-docker-compose.yml
@@ -1,9 +1,8 @@
 services:
   postgres:
-    container_name: postgres_mod-quick-marc
     image: postgres:16-alpine
     ports:
-      - "5432:5432"
+      - ${DB_PORT}:5432
     environment:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -12,7 +11,6 @@ services:
       - mod-quick-marc-local
 
   pgadmin:
-    container_name: pgadmin_mod-quick-marc
     image: dpage/pgadmin4:9.4
     ports:
       - ${PGADMIN_PORT}:80
@@ -26,13 +24,11 @@ services:
       - mod-quick-marc-local
 
   kafka:
-    container_name: kafka_mod-quick-marc
     image: apache/kafka-native
     networks:
       - mod-quick-marc-local
     ports:
-      - "9092:9092"
-      - "9093:9093"
+      - ${KAFKA_PORT}:9093
     environment:
       # Configure listeners for both docker and host communication
       KAFKA_LISTENERS: CONTROLLER://localhost:9091,HOST://0.0.0.0:9092,DOCKER://0.0.0.0:9093
@@ -49,16 +45,15 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
   kafka-ui:
-    container_name: kafka-ui_mod-quick-marc
     image: ghcr.io/kafbat/kafka-ui:latest
     networks:
       - mod-quick-marc-local
     ports:
-      - "8080:8080"
+      - ${KAFKA_UI_PORT}:8080
     environment:
       DYNAMIC_CONFIG_ENABLED: 'true'
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9093
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:${KAFKA_PORT}
     depends_on:
       - kafka
 
@@ -68,6 +63,4 @@ networks:
 
 volumes:
   pgadmin-data:
-    driver: "local"
-  postgres-data:
-    driver: "local"
+    driver: local
