--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,21 @@
       <artifactId>awaitility</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <!-- Development dependencies   -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-devtools</artifactId>
+      <scope>runtime</scope>
+      <optional>true</optional>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-docker-compose</artifactId>
+      <scope>runtime</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <build>
@@ -178,6 +193,8 @@
           <layers>
             <enabled>true</enabled>
           </layers>
+          <excludeDevtools>true</excludeDevtools>
+          <excludeDockerCompose>true</excludeDockerCompose>
           <excludes>
             <exclude>
               <groupId>org.springframework.boot</groupId>
