--- a/docker/infra-docker-compose.yml
+++ b/docker/infra-docker-compose.yml
@@ -1,9 +1,8 @@
 services:
   postgres:
-    container_name: postgres_mod-quick-marc
     image: postgres:16-alpine
     ports:
-      - "5432:5432"
+      - ${DB_PORT}:5432
     environment:
       POSTGRES_USER: ${DB_USERNAME}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -12,7 +11,6 @@ services:
       - mod-quick-marc-local
 
   pgadmin:
-    container_name: pgadmin_mod-quick-marc
     image: dpage/pgadmin4:9.4
     ports:
       - ${PGADMIN_PORT}:80
@@ -26,17 +24,16 @@ services:
       - mod-quick-marc-local
 
   kafka:
-    container_name: kafka_mod-quick-marc
     image: apache/kafka-native
     networks:
       - mod-quick-marc-local
     ports:
-      - "9092:9092"
-      - "9093:9093"
+      - ${KAFKA_PORT}:9093
+      - 29092:29092
     environment:
       # Configure listeners for both docker and host communication
-      KAFKA_LISTENERS: CONTROLLER://localhost:9091,HOST://0.0.0.0:9092,DOCKER://0.0.0.0:9093
-      KAFKA_ADVERTISED_LISTENERS: HOST://localhost:9092,DOCKER://kafka:9093
+      KAFKA_LISTENERS: CONTROLLER://localhost:9091,HOST://0.0.0.0:29092,DOCKER://0.0.0.0:9093
+      KAFKA_ADVERTISED_LISTENERS: HOST://localhost:29092,DOCKER://kafka:9093
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,DOCKER:PLAINTEXT,HOST:PLAINTEXT
       # Settings required for KRaft mode
       KAFKA_NODE_ID: 1
@@ -49,18 +46,44 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
   kafka-ui:
-    container_name: kafka-ui_mod-quick-marc
     image: ghcr.io/kafbat/kafka-ui:latest
     networks:
       - mod-quick-marc-local
     ports:
-      - "8080:8080"
+      - ${KAFKA_UI_PORT}:8080
     environment:
       DYNAMIC_CONFIG_ENABLED: 'true'
       KAFKA_CLUSTERS_0_NAME: local
-      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9093
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:${KAFKA_PORT}
     depends_on:
       - kafka
+
+  kafka-topic-init:
+    image: apache/kafka:latest
+    depends_on:
+      - kafka
+    environment:
+      KAFKA_HOST: kafka
+      KAFKA_PORT: 9093
+      ENV: ${ENV}
+      KAFKA_TOPIC_PARTITIONS: ${KAFKA_TOPIC_PARTITIONS}
+    volumes:
+      - ./kafka-init.sh:/usr/bin/kafka-init.sh
+    entrypoint: ["bash", "/usr/bin/kafka-init.sh"]
+    networks:
+      - mod-quick-marc-local
+
+  api-mock:
+    image: wiremock/wiremock:3.8.0
+    networks:
+      - mod-quick-marc-local
+    command:
+      - "--verbose"
+    ports:
+      - "9130:8080"
+    volumes:
+      - ../src/test/resources/mappings:/home/wiremock/mappings
+      - ../src/test/resources/__files:/home/wiremock/__files
 
 networks:
   mod-quick-marc-local:
@@ -68,6 +91,4 @@ networks:
 
 volumes:
   pgadmin-data:
-    driver: "local"
-  postgres-data:
-    driver: "local"
+    driver: local
