feat(marc-specification): use unique consumer group per instance for specification-storage.specification.updated topic
Closes: MODQM-483

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -85,6 +85,7 @@ folio:
         concurrency: ${KAFKA_EVENTS_CONCURRENCY:1}
         topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)(.*\.)specification-storage\.specification\.updated}
         group-id: ${folio.environment}-mod-quick-marc-specification-group
+        shared-group: false
 management:
   endpoints:
     web:
