--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
     <marc4j.version>2.9.6</marc4j.version>
     <mapstruct.version>1.6.3</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
+    <data-import-processing-core.version>4.5.0-SNAPSHOT</data-import-processing-core.version>
 
     <!-- Plugin properties -->
     <folio-module-descriptor-validator.version>1.0.1</folio-module-descriptor-validator.version>
@@ -122,6 +123,12 @@
       <artifactId>mapstruct-processor</artifactId>
       <version>${mapstruct.version}</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>data-import-processing-core</artifactId>
+      <version>${data-import-processing-core.version}</version>
     </dependency>
 
     <!-- Test dependencies -->
