--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -53,16 +53,14 @@ spring:
       - specifications
     caffeine:
       spec: maximumSize=500,expireAfterAccess=3600s
-  cloud:
-    openfeign:
-      okhttp:
-        enabled: true
   sql:
     init:
       # to boot up application despite of any DB connection issues
       continue-on-error: true
 folio:
   environment: ${ENV:folio}
+  exchange:
+    enabled: true
   cache:
     spec:
       specifications:
@@ -79,7 +77,7 @@ folio:
   logging:
     request:
       enabled: false
-    feign:
+    exchange:
       enabled: true
       level: basic
   kafka:
