--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -23,11 +23,10 @@ spring:
       spec: maximumSize=500,expireAfterAccess=3600s
   kafka:
     bootstrap-servers: ${spring.embedded.kafka.brokers}
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
 logging:
   level:
-    io.zonky.test.db.postgres: FATAL
+    org.folio.spring.client.ExchangeLoggingInterceptor: DEBUG
+    org.folio.spring.filter.LoggingRequestFilter: DEBUG
 folio:
   cache:
     spec:
@@ -35,11 +34,14 @@ folio:
         maximum-size: 500
         ttl: 24h
   environment: ${ENV:folio}
+  exchange:
+    enabled: true
   logging:
     request:
-      enabled: false
-    feign:
-      enabled: false
+      enabled: true
+      level: full
+    exchange:
+      enabled: true
       level: full
   kafka:
     numberOfPartitions: 1
