--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <records-editor.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor.yaml</records-editor.yaml.file>
-    <records-editor-async.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor-async.yaml</records-editor-async.yaml.file>
     <marc-specifications.yaml.file>${project.basedir}/src/main/resources/swagger.api/marc-specifications.yaml</marc-specifications.yaml.file>
 
     <folio-spring-support.version>10.0.0-SNAPSHOT</folio-spring-support.version>
@@ -29,6 +28,8 @@
     <marc4j.version>2.9.6</marc4j.version>
     <mapstruct.version>1.6.3</mapstruct.version>
     <lombok.mapstruct-binding.version>0.2.0</lombok.mapstruct-binding.version>
+    <data-import-processing-core.version>4.5.0-SNAPSHOT</data-import-processing-core.version>
+    <mod-inventory-storage-dto.version>30.0.0-SNAPSHOT</mod-inventory-storage-dto.version>
 
     <!-- Plugin properties -->
     <folio-module-descriptor-validator.version>1.0.1</folio-module-descriptor-validator.version>
@@ -122,6 +123,18 @@
       <artifactId>mapstruct-processor</artifactId>
       <version>${mapstruct.version}</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>data-import-processing-core</artifactId>
+      <version>${data-import-processing-core.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>mod-inventory-storage-dto</artifactId>
+      <version>${mod-inventory-storage-dto.version}</version>
     </dependency>
 
     <!-- Test dependencies -->
@@ -349,39 +362,6 @@
                 <generatedConstructorWithRequiredArgs>false</generatedConstructorWithRequiredArgs>
               </configOptions>
               <additionalProperties>removeEnumValuePrefix=true</additionalProperties>
-            </configuration>
-          </execution>
-          <execution>
-            <id>records-editor-async</id>
-            <goals>
-              <goal>generate</goal>
-            </goals>
-            <configuration>
-              <inputSpec>${records-editor-async.yaml.file}</inputSpec>
-              <output>${project.build.directory}/generated-sources</output>
-              <generatorName>spring</generatorName>
-              <modelPackage>${project.groupId}.qm.domain.dto</modelPackage>
-              <apiPackage>${project.groupId}.qm.rest.resource</apiPackage>
-              <generateApis>true</generateApis>
-              <generateApiTests>true</generateApiTests>
-              <generateApiDocumentation>true</generateApiDocumentation>
-              <generateModels>true</generateModels>
-              <generateModelTests>false</generateModelTests>
-              <generateSupportingFiles>true</generateSupportingFiles>
-              <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
-              <generateModelDocumentation>true</generateModelDocumentation>
-              <importMappings>
-                <importMapping>error=org.folio.tenant.domain.dto.Error</importMapping>
-              </importMappings>
-              <configOptions>
-                <java8>true</java8>
-                <useTags>true</useTags>
-                <dateLibrary>java8</dateLibrary>
-                <interfaceOnly>true</interfaceOnly>
-                <useSpringBoot3>true</useSpringBoot3>
-                <responseWrapper>DeferredResult</responseWrapper>
-                <generatedConstructorWithRequiredArgs>false</generatedConstructorWithRequiredArgs>
-              </configOptions>
             </configuration>
           </execution>
           <execution>
