--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -35,10 +35,10 @@ spring:
   cache:
     cache-names:
       - job-profiles
-      - qm-update-results
       - data-import-results
       - linking-rules-results
       - specifications
+      - mapping-metadata-cache
     caffeine:
       spec: maximumSize=500,expireAfterAccess=3600s
   cloud:
@@ -77,10 +77,6 @@ folio:
         concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
         topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_ERROR}
         group-id: ${folio.environment}-mod-quick-marc-di-error-group
-      qm-completed:
-        concurrency: ${KAFKA_EVENTS_CONCURRENCY:2}
-        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.QM_COMPLETED}
-        group-id: ${folio.environment}-mod-quick-marc-qm-group
       specification-updated:
         concurrency: ${KAFKA_EVENTS_CONCURRENCY:1}
         topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)(.*\.)specification-storage\.specification\.updated}
