--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -14,8 +14,6 @@ spring:
         format_sql: true
   cache:
     cache-names:
-      - job-profiles
-      - data-import-results
       - linking-rules-results
       - specifications
       - mapping-metadata-cache
@@ -49,11 +47,8 @@ folio:
         numPartitions: ${NUMBER_OF_PARTITIONS:1}
         replicationFactor: ${REPLICATION_FACTOR:1}
     listener:
-      di-completed:
+      specification-updated:
         concurrency: 1
-        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_COMPLETED}
-        group-id: ${folio.environment}-mod-quick-marc-di-completed-group
-      di-error:
-        concurrency: 1
-        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)[a-zA-z0-9-]+\.\w+\.DI_ERROR}
-        group-id: ${folio.environment}-mod-quick-marc-di-error-group
+        topic-pattern: ${KAFKA_EVENTS_CONSUMER_PATTERN:(${folio.environment}\.)(.*\.)specification-storage\.specification\.updated}
+        group-id: ${folio.environment}-mod-quick-marc-specification-group
+        shared-group: false
