feat: use setting API to determine extended authority mapping
Closes: MODQM-501

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -37,8 +37,10 @@ spring:
       - linking-rules-results
       - specifications
       - mapping-metadata-cache
+      - authorities-extended-mapping-cache
     caffeine:
       spec: maximumSize=500,expireAfterAccess=3600s
+    type: caffeine
   cloud:
     openfeign:
       okhttp:
