--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -17,8 +17,10 @@ spring:
       - linking-rules-results
       - specifications
       - mapping-metadata-cache
+      - authorities-extended-mapping-cache
     caffeine:
       spec: maximumSize=500,expireAfterAccess=3600s
+    type: caffeine
   kafka:
     bootstrap-servers: ${spring.embedded.kafka.brokers}
   autoconfigure:
